crates/compiler/semantic/src/validation/tests/snapshots/cairo_m_compiler_semantic__validation__tests__duplicate_definitions_diagnostics.snap
---
source: crates/compiler/semantic/src/validation/tests/mod.rs
expression: snapshot_content
---
Fixture: duplicate_definitions.cm
============================================================
Source code:
func test_duplicate_local() {
    let x = 1;
    let x = 2; // Should error: duplicate definition of 'x'
    return();
}

func test_duplicate_parameter(param: felt, param: felt) { // Should error: duplicate definition of 'param'
    return();
}

func test_different_scopes_ok() {
    let x = 1;
    {
        let x = 2; // OK: different scope
    }
    return x;
}

============================================================
Found 7 diagnostic(s):

--- Diagnostic 1 ---
[1003] Error: Duplicate definition of 'x'
   ╭─[ duplicate_definitions.cm:3:9 ]
   │
 3 │     let x = 2; // Should error: duplicate definition of 'x'
   │         ┬  
   │         ╰── Duplicate definition of 'x'
───╯

--- Diagnostic 2 ---
[1002] Warning: Unused variable 'x'
   ╭─[ duplicate_definitions.cm:2:9 ]
   │
 2 │     let x = 1;
   │         ┬  
   │         ╰── Unused variable 'x'
───╯

--- Diagnostic 3 ---
[1002] Warning: Unused variable 'x'
   ╭─[ duplicate_definitions.cm:3:9 ]
   │
 3 │     let x = 2; // Should error: duplicate definition of 'x'
   │         ┬  
   │         ╰── Unused variable 'x'
───╯

--- Diagnostic 4 ---
[1003] Error: Duplicate definition of 'param'
   ╭─[ duplicate_definitions.cm:7:44 ]
   │
 7 │ func test_duplicate_parameter(param: felt, param: felt) { // Should error: duplicate definition of 'param'
   │                                            ──┬──  
   │                                              ╰──── Duplicate definition of 'param'
───╯

--- Diagnostic 5 ---
[1002] Warning: Unused variable 'param'
   ╭─[ duplicate_definitions.cm:7:31 ]
   │
 7 │ func test_duplicate_parameter(param: felt, param: felt) { // Should error: duplicate definition of 'param'
   │                               ──┬──  
   │                                 ╰──── Unused variable 'param'
───╯

--- Diagnostic 6 ---
[1002] Warning: Unused variable 'param'
   ╭─[ duplicate_definitions.cm:7:44 ]
   │
 7 │ func test_duplicate_parameter(param: felt, param: felt) { // Should error: duplicate definition of 'param'
   │                                            ──┬──  
   │                                              ╰──── Unused variable 'param'
───╯

--- Diagnostic 7 ---
[1002] Warning: Unused variable 'x'
    ╭─[ duplicate_definitions.cm:14:13 ]
    │
 14 │         let x = 2; // OK: different scope
    │             ┬  
    │             ╰── Unused variable 'x'
────╯
